--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
                                 <div class="card-body text-center">
                                     <i class="fa fa-users fa-2x mb-2"></i>
                                     <h5>2</h5>
-                                    <p>Registered Users</p>
+                                    <p>Registered Students</p>
                                 </div>
                             </div>
                         </a>
