--- a/public/users.html
+++ b/public/users.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registered Users</title>
+    <title>Registered Students</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .user-card {
@@ -24,7 +24,7 @@
 <body class="bg-light">
 
     <div class="container my-5">
-        <h3 class="mb-4">Registered Users</h3>
+        <h3 class="mb-4">Registered Students</h3>
 
         <div class="row g-4">
             <!-- Sakshi -->
