sakshi code updated

--- a/public/test-details.html
+++ b/public/test-details.html
@@ -49,7 +49,7 @@
 
 <body>
     <div class="container my-5">
-        <h3 id="testTitle" class="mb-4 text-center text-primary fw-bold">Test Details</h3>
+        <h3 id="testTitle" class="mb-4 text-center text-primary fw-bold">Sakshi Test Details</h3>
 
         <div id="testContent" class="card-style"></div>
 
@@ -67,14 +67,11 @@
                ],
                 answerImages: [
                     "images/2025-07-16/answer1.webp",
-                    "images/2025-07-16/answer2.webp",
-                    "images/2025-07-16/answer3.webp",
-                    "images/2025-07-16/answer4.webp",
                     "images/2025-07-16/answer5.webp"
                 ],
-                marks: 18,
-                correct: 8,
-                incorrect: 2
+                marks: 6,
+                correct: 3,
+                incorrect: 7
             }
         };
 
