--- a/public/tests.html
+++ b/public/tests.html
@@ -38,7 +38,7 @@
 
 <body class="bg-light">
     <div class="container my-5">
-        <h3 class="mb-4">📝 Daily Test History</h3>
+        <h3 class="mb-4">📝Sakshi Daily Test History</h3>
 
         <!-- Filter Dropdown -->
         <div class="row mb-4">
@@ -80,9 +80,9 @@
                 date: '2025-07-16',
                 subject: 'Maths',
                 totalQuestions: 10,
-                correct: 8,
-                incorrect: 2,
-                marks: 16
+                correct: 3,
+                incorrect: 7,
+                marks: 6
             }
         ];
 
