--- a/public/index.html
+++ b/public/index.html
@@ -140,12 +140,12 @@
                                 <div class="card-body text-center">
                                     <i class="fa fa-file-alt fa-2x mb-2"></i>
                                     <h5>1</h5>
-                                    <p>Results Declared</p>
+                                    <p>Sakshi Results Declared</p>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    
+
                     <!-- Subjects Listed -->
                     <div class="col-12 col-sm-6 col-md-3 mb-3">
                         <div class="card text-white bg-danger">
