--- a/public/test-details.html
+++ b/public/test-details.html
@@ -67,6 +67,9 @@
                ],
                 answerImages: [
                     "images/2025-07-16/answer1.webp",
+                    "images/2025-07-16/answer2.webp",
+                    "images/2025-07-16/answer3.webp",
+                    "images/2025-07-16/answer4.webp",
                     "images/2025-07-16/answer5.webp"
                 ],
                 marks: 6,
