--- a/public/subject-analysis.html
+++ b/public/subject-analysis.html
@@ -50,7 +50,7 @@
     <script>
         const testRecords = [
             { date: "2025-07-16", subject: "Maths", marks: 6 },
-            // { date: "2025-07-17", subject: "Maths", marks: 18 },
+            { date: "2025-07-17", subject: "Maths", marks: 18 },
             // { date: "2025-07-20", subject: "Maths", marks: 17 },
             // { date: "2025-07-22", subject: "Science", marks: 14 },
             // { date: "2025-07-24", subject: "Science", marks: 16 },
