--- a/public/test-details.html
+++ b/public/test-details.html
@@ -64,7 +64,7 @@
                 subject: "Maths",
                 questionImages: [
                     "images/2025-07-16/questions.webp"
-               ],
+                ],
                 answerImages: [
                     "images/2025-07-16/answer1.webp",
                     "images/2025-07-16/answer2.webp",
@@ -75,6 +75,24 @@
                 marks: 6,
                 correct: 3,
                 incorrect: 7
+            },
+            "2025-07-17": {
+                subject: "Maths",
+                questionImages: [
+                    "images/2025-07-17/questions.webp"
+                ],
+                answerImages: [
+                    "images/2025-07-17/answer1.webp",
+                    "images/2025-07-17/answer2.webp",
+                    "images/2025-07-17/answer3.webp",
+                    "images/2025-07-17/answer4.webp",
+                    "images/2025-07-17/answer5.webp",
+                    "images/2025-07-17/answer6.webp",
+                    "images/2025-07-17/answer7.webp"
+                ],
+                marks: 18,
+                correct: 8,
+                incorrect: 2
             }
         };
 
